--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,5 +1,6 @@
 {
     "Home": {
+        "__comment": "Home correspond à la page d'accueil",
         "WelcomeText": "Bienvenue sur l'application !",
         "WelcomeTextLogged": "Bienvenue {{ username }} sur l'application !"
     }
