--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,5 +1,6 @@
 {
     "Home": {
+        "_commentaire": "Ce bloc correspond a l'accueil", 
         "WelcomeText": "Bienvenue sur l'app !",
         "WelcomeTextLogged": "Bienvenue {{username}} sur l'app"
     },
