Detection du changement

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,5 +2,8 @@
     "Home": {
         "WelcomeText": "Welcome on app",
         "WelcomeTextLogged": "Welcome {{ username }}"
+    },
+    "State": {
+        "Actif": "Active"
     }
 }
