--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -2,5 +2,8 @@
     "Home": {
         "WelcomeText": "Bienvenue sur l'application",
         "WelcomeTextLogged": "Bienvenue {{ username }}"
+    },
+    "State": {
+        "Actif": "Actif"
     }
 }
